--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
 
     <section id="about" class="wrap section">
-      <img src="photo.jpg" alt="Kohin and Aarsi" style="max-width:100%; border-radius:12px; margin-bottom:1.5rem;">
+      <img src="photo.PNG" alt="Kohin and Aarsi" style="max-width:100%; border-radius:12px; margin-bottom:1.5rem;">
       <h3>What is K + A</h3>
       <p><strong>K + A</strong> stands for <em>Kohin + Aarsi</em>. Kohin Gautam is truly the best person in the world. He is Aarsi Basnet’s person, beloved. Some might even say she won the lottery. Aarsi on the other hand is just an ordinary girl who loves her boyfriend more than he or anyone loves anything ever. He is smart, sweet, magnetic, caring, soft hearted, INSANELY HANDSOME, incredibly sexy. The craziest thing?? He doesn’t even know it. I truly don’t now how she pulled him. Anyways, here are some words from Aarsi.</p>
     </section>
